--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -195,6 +195,7 @@
 .sheet-header {
   flex: 0 auto;
   overflow: hidden;
+  min-height: fit-content;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
