--- a/src/scss/components/_chat-cards.scss
+++ b/src/scss/components/_chat-cards.scss
@@ -13,6 +13,10 @@
         margin-bottom: 0px;
         margin-top: 0px;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
 
         &--subheader {
             color: colors.$card-white;
