--- a/templates/chat/combat-power-message.hbs
+++ b/templates/chat/combat-power-message.hbs
@@ -1,7 +1,7 @@
 {{!-- Header always shows with item styling --}}
 <div class="chat-card">
   <div class="chat-card__header" style="{{style}}">
-    <div class="chat-card__header--status">
+    <div class="chat-card__header--status chat-card__header--image">
       <img src="{{img}}" class="chat-card__image--primary" /> 
       <div>{{name}}</div>
     </div>
