--- a/templates/chat/gear-equip-message.hbs
+++ b/templates/chat/gear-equip-message.hbs
@@ -1,5 +1,5 @@
 <div class="chat-card">
-  <div class="chat-card__header chat-card__header--equip">
+  <div class="chat-card__header chat-card__header--equip chat-card__header--image">
     <img src="{{item.img}}" class="chat-card__image--primary" /> 
     <div>{{item.name}} : {{#if equipped}}{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Equipped"}}{{else}}{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Unequipped"}}{{/if}}</div>
   </div>
