--- a/templates/chat/delete-status-message.hbs
+++ b/templates/chat/delete-status-message.hbs
@@ -1,5 +1,5 @@
 <div class="chat-card">
-  <div class="chat-card__header chat-card__header--delete">
+  <div class="chat-card__header chat-card__header--delete chat-card__header--image">
     <img src="{{item.img}}" class="chat-card__image--primary" /> 
     <div>{{item.name}} : {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Removed"}}</div>
   </div>
