--- a/templates/chat/gear-transfer-message.hbs
+++ b/templates/chat/gear-transfer-message.hbs
@@ -1,5 +1,5 @@
 <div class="chat-card">
-  <div class="chat-card__header chat-card__header--transfer">
+  <div class="chat-card__header chat-card__header--transfer chat-card__header--image">
     <img src="{{item.img}}" class="chat-card__image--primary" /> 
     <div>{{item.name}} : {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Transferred"}}</div>
   </div>
