--- a/templates/macros/gear-creator.hbs
+++ b/templates/macros/gear-creator.hbs
@@ -23,19 +23,37 @@
     <div class="gear-creator__upper-section">
       <div class="gear-creator__main-info">
         <div class="base-form__group">
-          <label class="base-form__label" for="name">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Name"}}</label>
-          <input class="base-form__text-input" autofocus type="text" id="name" name="name" placeholder="{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Name"}}">
+          <label class="base-form__label" for="name">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Name"}}
+          </label>
+          <input 
+            class="base-form__text-input" 
+            autofocus 
+            type="text" 
+            id="name" 
+            name="name" 
+            placeholder="{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Name"}}">
+          </input>
         </div>
 
         <div class="base-form__group">
-          <label class="base-form__label" for="description">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Description"}}</label>
-          <textarea class="base-form__textarea" id="description" name="description" placeholder="{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Description"}}"></textarea>
+          <label class="base-form__label" for="description">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Description"}}
+          </label>
+          <textarea 
+            class="base-form__textarea" 
+            id="description" 
+            name="description" 
+            placeholder="{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Description"}}">
+          </textarea>
         </div>
       </div>
 
       <div class="gear-creator__visual-info">
         <div class="base-form__group gear-creator__image-group">
-          <label class="base-form__label" for="img">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Image"}}</label>
+          <label class="base-form__label" for="img">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Image"}}
+          </label>
           <img
             class="gear-creator__image base-form__image--edit"
             src="{{storedData.gear_img}}"
@@ -46,17 +64,42 @@
             name="displayImage"
             id="displayImage"
           />
-          <input class="base-form__hidden-input" type="hidden" name="img" value="{{ifThen storedData.gear_img storedData.gear_img "icons/svg/item-bag.svg"}}">
+          <input 
+            class="base-form__hidden-input" 
+            type="hidden" 
+            name="img" 
+            value="{{ifThen storedData.gear_img storedData.gear_img "icons/svg/item-bag.svg"}}">
         </div>
 
           <div class="base-form__group">
-            <label class="base-form__label" for="bgColor">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Background"}}</label>
+            <label class="base-form__label" for="bgColor">
+              {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Background"}}
+            </label>
             <input class="base-form__color-input" type="color" id="bgColor" name="bgColor" value="{{ifThen storedData.gear_bgColor storedData.gear_bgColor "#7B4874"}}">
           </div>
 
           <div class="base-form__group">
-            <label class="base-form__label" for="textColor">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Text"}}</label>
-            <input class="base-form__color-input" type="color" id="textColor" name="textColor" value="{{ifThen storedData.gear_textColor storedData.gear_textColor "#ffffff"}}">
+            <label class="base-form__label" for="textColor">
+              {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Text"}}
+            </label>
+            <input 
+              class="base-form__color-input" 
+              type="color" 
+              id="textColor" 
+              name="textColor" 
+              value="{{ifThen storedData.gear_textColor storedData.gear_textColor "#ffffff"}}">
+          </div>
+
+          <div class="base-form__group">
+            <label class="base-form__label" for="iconTint">
+              {{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.IconTint"}}}:
+            </label>
+            <input 
+              class="base-form__color-input" 
+              type="color" 
+              id="iconTint" 
+              name="iconTint" 
+              value="{{ifThen storedData.gear_iconTint storedData.gear_iconTint "#ffffff"}}">
           </div>
       </div>
     </div>
@@ -65,43 +108,71 @@
       <div class="gear-creator__column">
         <div class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Attributes"}}</div>
         <div class="base-form__group">
-          <label class="base-form__label" for="quantity">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Quantity"}}</label>
+          <label class="base-form__label" for="quantity">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Quantity"}}
+          </label>
           <input class="base-form__number-input" type="number" id="quantity" name="quantity" value="1">
         </div>
 
         <div class="base-form__group">
-          <label class="base-form__label" for="weight">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Weight"}}</label>
+          <label class="base-form__label" for="weight">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Weight"}}
+          </label>
           <input class="base-form__number-input" type="number" id="weight" name="weight" value="0">
         </div>
 
         <div class="base-form__group">
-          <label class="base-form__label" for="cost">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Cost"}}</label>
+          <label class="base-form__label" for="cost">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Cost"}}
+          </label>
           <input class="base-form__number-input" type="number" id="cost" name="cost" value="0">
         </div>
 
         <div class="base-form__group">
-          <label class="base-form__label" for="targeted">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Targeted"}}</label>
+          <label class="base-form__label" for="targeted">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Targeted"}}
+          </label>
           <input class="base-form__checkbox" type="checkbox" id="targeted" name="targeted" checked>
         </div>
 
         <div class="base-form__group">
-            <label class="base-form__label" for="className">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ClassName"}}</label>
-            <select class="base-form__select" id="className" name="className">
-              {{#each classNames as |className|}}
-                <option value="{{lowercase className}}" {{#if (eq (lowercase className) "other")}}selected{{/if}}>{{localize (lookup @root.config.classNames className)}}</option>
-              {{/each}}
-            </select>
+          <label class="base-form__label" for="className">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ClassName"}}
+          </label>
+          <select class="base-form__select" id="className" name="className">
+            {{#each classNames as |className|}}
+              <option 
+                value="{{lowercase className}}" 
+                {{#if (eq (lowercase className) "other")}}selected{{/if}}
+              >
+                {{localize (lookup @root.config.classNames className)}}
+              </option>
+            {{/each}}
+          </select>
           </div>
 
         <div class="base-form__group">
-          <label class="base-form__label" for="equipped">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Equipped"}}</label>
-          <input class="base-form__checkbox" type="checkbox" id="equipped" name="equipped" {{#if gearEquippedDefault}}checked{{/if}}>
+          <label class="base-form__label" for="equipped">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Equipped"}}
+          </label>
+          <input 
+            class="base-form__checkbox" 
+            type="checkbox" 
+            id="equipped" 
+            name="equipped" 
+            {{#if gearEquippedDefault}}checked{{/if}}>
         </div>
 
         {{#if isGM}}
           <div class="base-form__group">
-            <label class="base-form__label" for="cursed">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Cursed"}}</label>
-            <input class="base-form__checkbox" type="checkbox" id="cursed" name="cursed">
+            <label class="base-form__label" for="cursed">
+              {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Cursed"}}
+            </label>
+            <input 
+              class="base-form__checkbox" 
+              type="checkbox" 
+              id="cursed" 
+              name="cursed">
           </div>
         {{/if}}
       </div>
@@ -109,7 +180,9 @@
       <div class="gear-creator__column">
         <div class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollSettings"}}</div>
         <div class="base-form__group">
-          <label class="base-form__label" for="roll.type">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollType"}}</label>
+          <label class="base-form__label" for="roll.type">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollType"}}
+          </label>
           <select class="base-form__select" id="roll.type" name="roll.type">
             {{#each rollTypes as |rollType rollTypeKey|}}
               <option value="{{lowercase rollType}}">{{rollType}}</option>
@@ -118,32 +191,70 @@
         </div>
 
         <div class="base-form__group">
-          <label class="base-form__label" for="roll.ability">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollAbility"}}</label>
+          <label class="base-form__label" for="roll.ability">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollAbility"}}
+          </label>
           <select class="base-form__select" id="roll.ability" name="roll.ability">
             {{#each abilities}}
-              <option value="{{lowercase this}}">{{localize (lookup @root.config.abilityAbbreviations this)}}</option>
+              <option value="{{lowercase this}}">
+                {{localize (lookup @root.config.abilityAbbreviations this)}}
+              </option>
             {{/each}}
-            <option value="unaugmented">{{localize "EVENTIDE_RP_SYSTEM.CombatOptions.Unaugmented"}}</option>
+            <option value="unaugmented">
+              {{localize "EVENTIDE_RP_SYSTEM.CombatOptions.Unaugmented"}}
+            </option>
           </select>
         </div>
 
         <div class="base-form__group">
-          <label class="base-form__label" for="roll.bonus">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollBonus"}}</label>
-          <input class="base-form__number-input" type="number" id="roll.bonus" name="roll.bonus" value="0">
+          <label class="base-form__label" for="roll.bonus">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollBonus"}}
+          </label>
+          <input 
+            class="base-form__number-input" 
+            type="number" 
+            id="roll.bonus" 
+            name="roll.bonus" 
+            value="0">
         </div>
 
         <div class="base-form__group">
-          <label class="base-form__label" for="roll.diceAdjustments.advantage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollAdvantage"}}</label>
-          <input class="base-form__number-input" type="number" id="roll.diceAdjustments.advantage" name="roll.diceAdjustments.advantage" value="0">
+          <label class="base-form__label" for="roll.diceAdjustments.advantage">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollAdvantage"}}
+          </label>
+          <input 
+            class="base-form__number-input" 
+            type="number" 
+            id="roll.diceAdjustments.advantage" 
+            name="roll.diceAdjustments.advantage" 
+            value="0">
         </div>
 
         <div class="base-form__group">
-          <label class="base-form__label" for="roll.diceAdjustments.disadvantage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollDisadvantage"}}</label>
-          <input class="base-form__number-input" type="number" id="roll.diceAdjustments.disadvantage" name="roll.diceAdjustments.disadvantage" value="0">
+          <label class="base-form__label" for="roll.diceAdjustments.disadvantage">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollDisadvantage"}}
+          </label>
+          <input 
+            class="base-form__number-input" 
+            type="number" 
+            id="roll.diceAdjustments.disadvantage" 
+            name="roll.diceAdjustments.disadvantage" 
+            value="0">
         </div>
       </div>
 
       <div class="gear-creator__column">
+        <div class="base-form__group">
+          <label class="base-form__label" for="displayOnToken">
+            {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.DisplayOnToken"}}
+          </label>
+          <input 
+            class="base-form__checkbox" 
+            type="checkbox" 
+            id="displayOnToken" 
+            name="displayOnToken" 
+            {{#if storedData.gear_displayOnToken}}checked{{/if}}>
+        </div>
         <div class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Effects"}}</div>
         {{#each abilities}}
           <div class="base-form__group gear-creator__effect-group">
