Added iconTint support to character effects since they'll use it the most and icon tint / display on token support to the gear creator.

--- a/templates/item/character-effects.hbs
+++ b/templates/item/character-effects.hbs
@@ -16,6 +16,18 @@
     </span>
   </label>
 
+  <div>
+    <label class="base-form__label" for="iconTint">
+        {{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.IconTint"}}}:
+      </label>
+      <input 
+        class="base-form__color-input" 
+        type="color" 
+        id="iconTint" 
+        name="iconTint" 
+        value="{{iconTint}}">
+  </div>
+
   <div class="eventide-item-sheet__scrollable-container">
     {{! Regular Effects Section }}
     <div class="eventide-item-sheet__effects-section">
